--- a/xonotic-server.cfg
+++ b/xonotic-server.cfg
@@ -362,7 +362,8 @@ set sv_termsofservice_url "" "URL from which server specific Terms of Service sh
 set g_waypoints_for_items 0 "make waypoints out of items; \"0\" = never, \"1\" = unless the mapper prevents it by worldspawn.spawnflags & 1, \"2\" = always"
 
 set g_maplist_votable 6 "number of maps that are shown in the map voting at the end of a match; \"0\" = show none"
-set g_maplist_votable_keeptwotime 15 "show only 2 options after this amount of time during map vote screen"
+set g_maplist_votable_reduce_time 15 "reduce the number of options shown after this amount of time, during map vote screen; \"0\" = disable this feature"
+set g_maplist_votable_reduce_count 2 "number of options shown after being reduced, during the map vote screen; if < 2, keep all maps that received any votes, if at least 2 did"
 set g_maplist_votable_timeout 30 "timeout for the map voting; must be below 50 seconds!"
 set g_maplist_votable_suggestions 2 "number of maps a player is allowed to suggest for the map voting screen using 'suggestmap'"
 set g_maplist_votable_suggestions_override_mostrecent 0 "allow players to suggest maps that have been played recently"
@@ -371,7 +372,8 @@ set g_maplist_votable_abstain 0 "offer a 'don't care' option on the voting scree
 set g_maplist_votable_screenshot_dir "maps levelshots"	"where to look for map screenshots"
 
 set sv_vote_gametype 0 "show a vote screen for gametypes before map vote screen"
-set sv_vote_gametype_keeptwotime 10 "show only 2 options after this amount of time during gametype vote screen"
+set sv_vote_gametype_reduce_time 10 "reduce the number of options shown after this amount of time, during gametype vote screen; \"0\" = disable this feature"
+set sv_vote_gametype_reduce_count 2 "number of options shown after being reduced, during gametype vote screen; if < 2, keep all gametypes that received any votes, if at least 2 did"
 set sv_vote_gametype_options "dm tdm ca ctf" "identifiers of game modes on the voting screen, can be custom (max 9 chars). see example in server/server.cfg"
 set sv_vote_gametype_timeout 20 "how long the gametype vote screen lasts"
 set sv_vote_gametype_default_current 1 "keep the current gametype if no one votes"
